--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
           This is the advisor choice experiment with reliability changes
     </title> -->
     <script type="text/javascript">
-        window.prolificID = window.location.search.match('[?&]PROLIFIC_PID=\\w+');
-        if(prolificID !== null)
-            prolificID = prolificID[0].substring(14);
+        const chars = utils.shuffle(["b","c","d","f","g","h","j","k","l","m","n","p","q","r","s","t","v","w","x","y","z","1","2","3","4","5","6","7","8","9"]);
+        const participantID = (chars.slice(1,7)).join('');
         // redirect if we don't have consent for participation
         let consent = window.location.search.match("[?&]consent=true");
         if(consent === null) {
-            redirectURL = "../consent.html?study=AdvisorChoice";
-            if(prolificID !== null)
-                redirectURL += "&PROLIFIC_PID=" + prolificID;
+            let redirectURL = "consent.html";
+            redirectURL += "&ParticipantID=" + participantID;
             window.location.replace(redirectURL); // simulate redirect (no history)
         }
     </script>
-    <script src="../src/sha1.js"></script>
+    <script src="/src/utils.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../src/bowser.min.js"></script>
+    <link rel="stylesheet" href="../style/styleIST.css"/>
     <link rel="shortcut icon" href="#" />
 </head>
 <body class="jspsych-display-element" tabindex="0" style="margin: 0; height: 100%; width: 100%;">
@@ -48,9 +46,8 @@
     const trialTime = 0; // If previous conditional is true, this is the amount of time (in seconds) allotted for each scenario.
 
     const scenarioFile = 'assets/image/human.jpg'; // filepath for where scenarios are defined.
-    const endRedirectURL = 'https://app.prolific.co/submissions/complete?cc=88EDD1C0'; //What URL to redirect to after the experiment.
+    const endRedirectURL = 'https://bbc.co.uk'; //What URL to redirect to after the experiment.
 
-    // - Figure out structure of scenario file
     // - Show initial patient complaint
     // - Initial hypothesis generation and confidence
     // - Autopopulated list of diagnoses
@@ -58,6 +55,56 @@
     // - Link file to retrival of information
     // - Button to lock in answer
     // - Provide final answer and confidence
+
+    // Demographic data
+    let yearsOfMedicalExperience;
+    let gender;
+    let age;
+    let dateCompleted = utils.longformDate();
+
+    // What independent and dependent data variables do we have? 
+
+    let numOfTrials = scenarios.length;
+    let hypothesisCondition = 0; // 1: no working diagnosis, 2: initial hypothesis provided, 3: free hypothesis generation
+    let shuffledScenarios = utils.shuffle(scenarios);
+    let scenarioOrder = scenarios.map(function(a) {return a.ID;});
+    scenarioOrder = scenarioOrder.join('');
+
+    // Trial level data
+    let numOfTestsArray;
+    let totalTestTimeArray;
+    let trialTimeArray;
+    let finalConfidenceArray;
+    let subjDifficultyArray;
+
+    // Aggregate data
+    let correctTrials;
+    let accuracy = correctTrials/numOfTrials;
+    let meanNumOfTests;
+    let meanTestTime;
+    let meanTrialTime;
+    let meanFinalConfidence;
+    let meanSubjDifficulty;
+
+    // Likelihood data?
+
+
+    var startExperiment = Date.now();
+
+    jsPsych.init({
+    timeline: timeline,
+    preload_images: images,
+    show_preload_progress_bar: false, // hide preload progress bar
+    on_finish: function() {
+      var endExperiment = Date.now();
+      var expTime = msToMinSec(endExperiment - startExperiment);
+      // add all experimental details to aggregateObject
+
+    }
+  });
+
+
+
 
 </script>
 </body>
