--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Diagnostic Experiment</title>
     <!--title>
-          This is the advisor choice experiment with reliability changes
+          This experiment looks at information seeking and confidence in diagnostic decisions.
     </title> -->
     <script src="/src/utils.js"></script>
     <script src="/src/scenarioFile.js"></script>
@@ -28,6 +28,7 @@
     <script src="/jspsych/dist/plugin-survey-multi-select-limit.js" type="text/javascript"></script>
     <script src="/jspsych/dist/plugin-survey-text.js" type="text/javascript"></script>
     <script src="/jspsych/dist/plugin-canvas-slider-response.js" type="text/javascript"></script>
+    <script src="/jspsych/dist/plugin-canvas-slider-response-multi.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../style/styleIST.css"/>
     <link rel="shortcut icon" href="#" />
 </head>
@@ -54,8 +55,9 @@
     const demoQuestions = false; // If true, asks participants for age, gender and medical experience.
     const doDebrief = false; // If true, run debrief questionnaire at the end.
     const timeLimit = false; // If true, set a time limit for participants before they are forced to make a decision.
+    const doDifficulty = false; //If true, ask participants at the end of each trial how difficult they found the case.
     const trialTime = 0; // If previous conditional is true, this is the amount of time (in seconds) allotted for each scenario.
-    const hypothesisGenerationTrials = true; // If true, run trials with starting part where participants say which diagnoses they are considering at the start.
+    const hypothesisGenerationTrials = false; // If true, run trials with starting part where participants say which diagnoses they are considering at the start.
     const doLikelihoodEstimates = true;
     const topXLikelihood = 3;
 
@@ -89,6 +91,8 @@
     buttons = Object.keys(buttons);
     buttons.splice(buttons.indexOf("ID"), 1);
     buttons.splice(buttons.indexOf("True Condition"), 1);
+    buttons.splice(buttons.indexOf("Prompt"), 1);
+    buttons.splice(buttons.indexOf("Suspected"), 1);
     buttons.push("RECORD FINAL DIAGNOSIS")
 
     // Trial level data
@@ -111,13 +115,24 @@
     ////////////////////////////////////////////
     ////////////////////////////////////////////
 
-    const conditionNames = ["Non-Directed", "Directed", "Generation"]
     let numOfScenarios = scenarios.length;
+    var conditions = [];
+    if (hypothesisGenerationTrials)
+    {
+        conditions = Array(numOfScenarios).fill("Generation");
+    }
+    else
+    {
+        conditions = Array(numOfScenarios/2).fill("Directed");
+        conditions.push(Array(numOfScenarios/2).fill("Non-Directed"));
+        conditions = conditions.flat();
+        conditions = shuffle(conditions);
+    }
     var startExperimentTime = Date.now();
     let timeline = [];
     const queryString = window.location.search;
     var pid = queryString.split("ParticipantID=")[1];
-    console.log(pid);
+    console.log(conditions);
 
 
     let exp = new Structure({
@@ -128,8 +143,7 @@
         scenarioObject: shuffledScenarios,
         date: dateCompleted,
         order: scenarioOrder,
-        condition: hypothesisCondition,
-        conditionName: conditionNames[hypothesisCondition],
+        expConditionOrder: conditions,
         complete: false,
         participantID: pid
     });
@@ -172,10 +186,21 @@
         }
     }
 
+    const caseIntro = {
+        type: jsPsychInstructions,
+        pages: ["<p>For this case: " + exp.getCaseIntro()],
+        show_clickable_nav: true,
+        allow_backward: false,
+        on_load: ()=>exp.fullscreenMode(),
+        on_finish: (trial)=>{
+            exp.fullscreenMode();
+        }
+    }
+
     const hypothesisGeneration = {
         type: jsPsychSurveyMultiSelect,
         questions: [{
-          prompt: "Choose from the list below any diagnoses you feel are plausible at this stage.", 
+          prompt: "Choose from the list below any and all diagnoses you feel are plausible at this stage.", 
           name: 'initalDiagnoses', 
           options: shuffle(diagnoses), 
           required: true
@@ -220,9 +245,26 @@
             exp.fullscreenMode();
         },
         on_finish: (trial)=>{
-            exp.saveHypotheses(trial);
+            exp.saveTopDiagnoses(trial);
         }
         
+    }
+
+    const likelihoodAssign = {
+        type: jsPsychCanvasSliderResponseMulti,
+        stimulus: '',
+        labels: ["Not At All Confident", "Fully Confident"],
+        require_movement: false,
+        prompt: "<p>Record the likelihood of each of the top " + topXLikelihood + " diagnoses on the scales below.</p>",
+        response_ends_trial: true,
+        slider_number: topXLikelihood,
+        struct_object: exp,
+        on_load: ()=>{
+            exp.fullscreenMode();
+        },
+        on_finish: (trial)=>{
+            exp.saveLikelihoods(trial);
+        }
     }
 
     const finalDiagnosis = {
@@ -259,6 +301,26 @@
         }
     }
 
+    const perceivedDifficulty = {
+        type: jsPsychCanvasSliderResponse,
+        stimulus: '',
+        labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10"],
+        require_movement: false,
+        prompt: "<p>On a scale from 1 (trivial) to 10 (impossible), how hard did you find it to determine a diagnosis for this case?</p>",
+        min: 1,
+        min: 10,
+        step: 1,
+        slide_start: 5,
+        response_ends_trial: true,
+        on_load: ()=>{
+            exp.fullscreenMode();
+        },
+        on_finish: (trial)=>{
+            exp.saveConfidence(trial);
+            exp.exportGovernor();
+        }
+    }
+
     const debrief = {
         type: jsPsychSurveyText,
         preamble: "Please take some time to answer a couple of final questions.",
@@ -272,11 +334,18 @@
         }
     }
 
-    let trial = [infoSeeking, finalDiagnosis, confidence];
+    let trial = [likelihoodRank, likelihoodAssign, infoSeeking, finalDiagnosis, confidence];
 
     if (hypothesisGenerationTrials == true)
     {
         trial.unshift(hypothesisGeneration);
+    }
+
+    trial.unshift(caseIntro);
+
+    if (doDifficulty == true)
+    {
+        trial.push(perceivedDifficulty);
     }
 
     timeline.push(welcome);
