Added Cases and Confidence Sliders

--- a/index.html
+++ b/index.html
@@ -352,6 +352,8 @@
     	prompt: "<p>Input your diagnoses</p>",
         start_empty: false,
         starting_list: ["Pneumothorax","COPD", "Sepsis"],
+        slider_labels: ["Not At All Likely", "Extremely Likely"],
+        slider_start: 5,
         on_load: ()=>{
             exp.fullscreenMode();
         },
