--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="/jspsych/dist/plugin-survey-multi-select-limit-sliders.js" type="text/javascript"></script>
     <script src="/jspsych/dist/plugin-survey-text.js" type="text/javascript"></script>
     <script src="/jspsych/dist/plugin-canvas-slider-response.js" type="text/javascript"></script>
+    <script src="/jspsych/dist/plugin-canvas-slider-response-with-buttons.js" type="text/javascript"></script>
     <script src="/jspsych/dist/plugin-free-text-ranked-list.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../style/styleIST.css"/>
     <link rel="shortcut icon" href="#" />
@@ -282,12 +283,18 @@
     }
 
     const confidence = {
-        type: jsPsychCanvasSliderResponse,
+        type: jsPsychCanvasSliderResponseWithButtons,
         stimulus: '',
         labels: ["Not At All Confident", "Fully Confident"],
         require_movement: false,
         prompt: "<p>Record how confident you are that you would be ready to start treating this patient.</p>",
         response_ends_trial: true,
+        text_prompt: "Record your treatment plan below.",
+        text_placeholder: "Input your treatment plan (eg what further tests you would run, any advice or documentation you would seek)",
+        text_rows: 10,
+        text_columns: 30,
+        text_name: "TreatmentPlan",
+        scale_label: "Ready to Treat",
         on_load: ()=>{
             exp.fullscreenMode();
         },
@@ -432,11 +439,10 @@
             }
             trial.push(confidence);
         }
-        trial.push(treatmentPlan); 
     }   
     else
     {
-        trial = [infoSeeking, differentialDiagnoses, finalDiagnosis, confidence, treatmentPlan];
+        trial = [infoSeeking, differentialDiagnoses, finalDiagnosis, confidence];
     }
 
     if (hypothesisGenerationTrials)
